--- a/report/mendeleybib.bib
+++ b/report/mendeleybib.bib
@@ -1,3 +1,33 @@
+@incollection{Helgaker1995,
+author = {Helgaker, Trygve and Taylor, Peter R},
+booktitle = {Modern Electronic Structure Theory},
+doi = {10.1142/9789812832115\_0001},
+file = {:Users/henriksveinsson/Documents/Mendeley Desktop/ModElectStructTheory\_GaussianBasisIntegrals\_1995.pdf:pdf},
+pages = {725--856},
+title = {{Gaussian Basis Sets and Molecular Integrals}},
+year = {1995}
+}
+@article{wiberg2001holleman,
+author = {Wiberg, N},
+journal = {Academic Press, New York},
+title = {{Holleman-Wiberg's inorganic chemistry}},
+year = {2001}
+}
+@article{hogberget2013quantum,
+author = {H\o gberget, J\o rgen},
+title = {{Quantum Monte-Carlo Studies of Generalized Many-body Systems}},
+year = {2013}
+}
+@article{gordon1982basis,
+author = {Gordon, M S and Binkley, J S and Pople, J A and Pietro, W J and Hehre, W J},
+journal = {Am. Chem. Soc},
+keywords = {3-21G Na-Ar,4-31G},
+mendeley-tags = {3-21G Na-Ar,4-31G},
+pages = {2797},
+title = {{The basis sets designated 4--31G ($\nu$) and 6--31G$\nu$ $\nu$ in this work contain five d functions rather than the six recommended by J}},
+volume = {104},
+year = {1982}
+}
 @article{Hehre1970,
 author = {Hehre, W. J.},
 doi = {10.1063/1.1673374},
@@ -72,10 +102,6 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17428029},
 volume = {47},
 year = {2007}
 }
-@misc{,
-title = {{EMSL Basis Set Exchange}},
-url = {https://bse.pnl.gov/bse/portal}
-}
 @techreport{Standard2013,
 author = {Standard, Jean M.},
 title = {{Performance of Hartree-Fock and Correlated Methods}},
@@ -106,25 +132,30 @@ title = {{A New Look at Correlations in Atomic and Molecular Systems . I . Appli
 volume = {XX},
 year = {1981}
 }
-@article{binkley1980self,
-author = {Binkley, J Stephen and Pople, John A and Hehre, Warren J},
-journal = {Journal of the American Chemical Society},
-keywords = {3-21G H-Ne},
-mendeley-tags = {3-21G H-Ne},
-number = {3},
-pages = {939--947},
-publisher = {ACS Publications},
-title = {{Self-consistent molecular orbital methods. 21. Small split-valence basis sets for first-row elements}},
-volume = {102},
-year = {1980}
+@article{Helgaker2006,
+author = {Helgaker, Trygve},
+file = {:Users/henriksveinsson/Documents/Mendeley Desktop/SostrupIntegrals\_06.pdf:pdf},
+title = {{Molecular Integral Evaluation The 9th Sostrup Summer School Quantum Chemistry and Molecular Properties}},
+year = {2006}
 }
-@article{gordon1982basis,
-author = {Gordon, M S and Binkley, J S and Pople, J A and Pietro, W J and Hehre, W J},
-journal = {Am. Chem. Soc},
-keywords = {3-21G Na-Ar,4-31G},
-mendeley-tags = {3-21G Na-Ar,4-31G},
-pages = {2797},
-title = {{The basis sets designated 4--31G ($\nu$) and 6--31G$\nu$ $\nu$ in this work contain five d functions rather than the six recommended by J}},
-volume = {104},
-year = {1982}
+@techreport{Sherrill2000,
+author = {Sherrill, C David},
+file = {:Users/henriksveinsson/Documents/Mendeley Desktop/hf-intro.pdf:pdf},
+pages = {1--8},
+title = {{An Introduction to Hartree-Fock Molecular Orbital Theory What Problem Are We Solving ? Motivation and the Hartree Product}},
+year = {2000}
+}
+@article{Feller1987,
+author = {Feller, David and Boyle, Caroline M. and Davidson, Ernest R.},
+doi = {10.1063/1.451999},
+issn = {00219606},
+journal = {The Journal of Chemical Physics},
+keywords = {H2O-energy},
+mendeley-tags = {H2O-energy},
+number = {6},
+pages = {3424},
+title = {{One-electron properties of several small molecules using near Hartree–Fock limit basis sets}},
+url = {http://scitation.aip.org/content/aip/journal/jcp/86/6/10.1063/1.451999},
+volume = {86},
+year = {1987}
 }
